# MCP-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  MCP_PLATFORM_REFACTORING_PLAN.md  MIGRATION_COMPLETE.md  MIGRATION_RECOMMENDATIONS.md  Makefile  PROJECT_ARCHITECTURE_GUIDE.md  QUICKSTART.md  README.md  cachetools.py  conftest.py  docker-compose.yml  flake8_baseline.txt  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  test_conditional_config.py
.github/workflows/: docker-hub.yml  docs.yml  unified-ci.yml
charts/mcp-server/: Chart.yaml
docker/: README.md  gateway-test.dockerfile  gateway.dockerfile  mcp-platform.dockerfile
docker/init-scripts/: 01-init-user.sql
docker/monitoring/: prometheus.yml
docker/monitoring/alerts/: mcp-platform.yml
docker/nginx/: Dockerfile  docker-entrypoint.sh  generate-config.sh  nginx.conf  proxy_params
docker/nginx/conf.d/: default.conf  gateway.conf
docker/nginx/templates/: gateway.conf.template
docs/: faq.md  index.md  stdio-tool-execution.md
docs/api/: cli.md
docs/cli/: connect.md  create.md  discover-tools.md  index.md  interactive.md  list.md  logs.md  run-tool.md  tools.md
docs/client/: examples.md  index.md  servers.md  templates.md  tools.md
docs/development/: architecture.md  setup.md
docs/gateway/: api-reference.md  database-support.md  index.md
docs/getting-started/: installation.md
docs/guides/: contributing.md  troubleshooting.md
docs/interactive-cli/: call.md  select.md  unselect.md
docs/server-templates/: available.md
docs/server-templates/bigquery/: index.md  usage.md
docs/server-templates/demo/: index.md  usage.md
docs/server-templates/filesystem/: index.md  usage.md
docs/server-templates/github/: index.md  usage.md
docs/server-templates/gitlab/: index.md  usage.md
docs/server-templates/slack/: index.md  usage.md
docs/server-templates/zendesk/: index.md  usage.md
docs/templates/: creating.md  development.md  index.md  template-json-reference.md  testing.md
docs/user-guide/: cli-reference.md  monitoring.md
examples/: gateway_example.py
mcp_platform/: __init__.py
mcp_platform/backends/: __init__.py  base.py  docker.py  kubernetes.py  mock.py  podman.py
mcp_platform/cli/: __init__.py  cli.py  interactive_cli.py
mcp_platform/client/: client.py
mcp_platform/core/: __init__.py  cache.py  config_processor.py  deployment_manager.py  exceptions.py  mcp_connection.py  multi_backend_manager.py  response_formatter.py  template_manager.py  tool_caller.py  tool_manager.py
mcp_platform/gateway/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  __init__.py  auth.py  cli.py  client.py  database.py  docker-compose.yml  gateway_server.py  health_checker.py  integration.py  load_balancer.py  models.py  registry.py
mcp_platform/gateway/init-scripts/: 01-init.sql
mcp_platform/gateway/nginx/: nginx.conf
mcp_platform/gateway/nginx/conf.d/: gateway.conf
mcp_platform/gateway/scripts/: start.sh
mcp_platform/template/templates/bigquery/: Dockerfile  README.md  (+6 more)
mcp_platform/template/utils/: creation.py  discovery.py
mcp_platform/tools/: base_probe.py  docker_probe.py  kubernetes_probe.py  mcp_client_probe.py
mcp_platform/utils/: __init__.py  image_utils.py
reports/: CERTIFICATE_MANAGEMENT.md  DOCKERFILE_CONFIGURATION_ANALYSIS.md  DOCKER_ARCHITECTURE_ANALYSIS_2025-09-07.md  DOCKER_DAEMON_NETWORK_CONFIGURATION.md  DOCUMENTATION_IMPROVEMENT_REPORT_2025-09-07.md  ENV_EXAMPLE_IMPROVEMENT_REPORT_2025-09-07.md  GATEWAY_DOCKERFILE_IMPROVEMENT_REPORT.md  NGINX_CERTIFICATE_MANAGEMENT_ANALYSIS.md  PERFORMANCE_SCALABILITY_ANALYSIS.md  UV_DOCKER_FINAL_SUMMARY_2025-09-07.md  UV_DOCKER_MIGRATION_ANALYSIS_2025-09-07.md  UV_DOCKER_MIGRATION_COMPLETE_2025-09-07.md  UV_DOCKER_MIGRATION_CORRECTED_2025-09-07.md
scripts/: build_docs.py  check_pypi_version.py  docker-compose-up.sh  init-certificates.sh  mcp_endpoint_manager.py  renew-certificates.sh  setup_and_test.py  test_gateway.py  validate-gateway-config.sh
tests/: __init__.py  conftest.py  mcp_test_utils.py  runner.py  test_runner_gateway.py
tests/test_integration/: conftest.py  test_custom_templates_integration.py
tests/test_integration/test_cli/: test_cli.py  test_interactive_cli.py
tests/test_integration/test_client/: test_mcp_client_integration.py  test_volume_mounting_integration.py
tests/test_integration/test_core/: test_backend_integration.py  test_cli_end_to_end.py  test_client_tool_integration.py  test_deployment_manager_integration.py  test_template_manager_integration.py
tests/test_integration/test_gateway/: test_gateway_integration.py  test_gateway_simple.py  test_load_balancer_integration.py
tests/test_integration/test_template/: test_all_templates.py  test_gateway_integration.py  test_name_overrides.py  test_validation_integration.py
tests/test_integration/test_tools/: test_tools.py
tests/test_unit/: conftest.py
tests/test_unit/test_backends/: test_base.py  test_docker.py  test_docker_cleanup.py  test_docker_connect.py  test_docker_stdio.py  test_docker_volumes.py  test_kubernetes_backend.py  test_mock.py
tests/test_unit/test_cli/: test_cli.py  test_interactive_cli.py
tests/test_unit/test_client/: test_mcp_client.py
tests/test_unit/test_core/: test_cache.py  test_config_processor.py  test_deployment_manager_unit.py  test_main.py  test_mcp_connection.py  test_multi_backend_manager.py  test_response_formatter.py  test_template_manager_unit.py  test_tool_manager.py
tests/test_unit/test_gateway/: test_auth.py  test_cli.py  test_client.py  test_database.py  test_gateway_init.py  test_gateway_server.py  test_health_checker.py  test_integration.py  test_load_balancer.py  test_models.py  test_models_extended.py  test_registry.py
tests/test_unit/test_template/: test_custom_templates.py  test_template_volumes.py  test_validation_unit.py
tests/test_unit/test_tools/: test_base_probe.py  test_docker_probe.py  test_kubernetes_probe.py  test_mcp_client_probe.py
tests/test_unit/test_utils/: test_image_utils.py
(+79 files in other folders)
